--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                         <p>MariaDB / SQL</p>
                     </div>
                     
-                    <div class="skill-item">
+                    <!-- <div class="skill-item">
                         <img src="assets/img/icons/dnp3.svg" alt="DNP3 Icon">
                         <p>Profinet / DNP3 / OPC UA</p>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -255,4 +255,5 @@
         </div>
     </footer>
     </body>
+
 </html>
