--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     
                     <div class="skill-item">
                         <img src="assets/sw/siemens/simatic-manager.jpg" alt="Simatic Manager Icon">
-                        <p>Simatic Manager</p>
+                        <p>Step7 Manager</p>
                     </div>
                     
                     <div class="skill-item">
