--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     
                     <div class="skill-item">
                         <img src="assets/sw/ignition/mariadb-logo.png" alt="MariaDB Icon">
-                        <p>MariaDB / SQL</p>
+                        <p>SQL | MariaDB</p>
                     </div>
 
                 </div>
