--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </article>
                 
                 <article class="project-card">
-                    <img src="projects/casting-ng/img/IMG_0454.png" alt="Concrete Sleeper Plant Thumbnail">
+                    <img src="projects/casting-ng/img/IMG_0454.jpg" alt="Concrete Sleeper Plant Thumbnail">
                     <div class="card-content">
                         <h2>Development/Commissioning: Concrete Sleeper Plant</h2>
                         <p>Involved in software development to project implementation, ensuring to meet the production specification.</p>
