--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
-                            <span class="tech-tag">IO-Link</span>
                             <span class="tech-tag">S7-1500F</span>
+                            <span class="tech-tag">Rexroth</span>
+                            <span class="tech-tag">IO-Link</span>
                             <span class="tech-tag">Europe</span>
                         </div>
                     </div>
