Mainly projects page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             
             <div class="site-logo">
                 <a href="index.html">
-                    <h2>NGRAZA</h2> 
+                    <h2>BERT GRAZA</h2>
                 </a>
             </div>
             
@@ -166,6 +166,7 @@
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
+                            <span class="tech-tag">Modbus-TCP</span>
                             <span class="tech-tag">Europe</span>
                         </div>
                     </div>
