--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             
             <div class="site-logo">
                 <a href="index.html">
-                    <h2>NRGRA</h2> <!-- <h2>DAIQ Supply and Services</h2>  -->
+                    <h2>BERT GRAZA</h2>
                 </a>
             </div>
             
