--- a/learning.html
+++ b/learning.html
@@ -50,7 +50,7 @@
                 <p>Email: <a href="n.rgraza@yahoo.com">n.rgraza@yahoo.com</a></p>
                 <p>Phone: [+63 905 5xxx xxx]</p>
                 <div class="social-links">
-                    <a href="#" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/ngraza" target="_blank">LinkedIn</a>
                     <a href="#" target="_blank">Youtube</a>
                 </div>
             </div>
