--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     
                     <div class="skill-item">
                         <img src="assets/sw/ignition/ignition.png" alt="Ignition SCADA Icon">
-                        <p>Ignition SCADA</p>
+                        <p>Ignition</p>
                     </div>
                     
                     <div class="skill-item">
@@ -97,6 +97,7 @@
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
                             <span class="tech-tag">Report Module</span>
+                            <span class="tech-tag">Python</span>
                             <span class="tech-tag">MariaDB</span>
                             <span class="tech-tag">DNP3</span>
                             <span class="tech-tag">OPC</span>
@@ -193,7 +194,7 @@
                 <p>Industrial Automation & SCADA Engineer</p>
                 <p>Location: Makati City, Philippines</p>
                 <p>Email: <a href="mailto:n.rgraza@yahoo.com">n.rgraza@yahoo.com</a></p>
-                <p>Phone: [+63 905 5091 301]</p>
+                <p>Phone: +63 905 5091 301</p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/ngraza" target="_blank">LinkedIn</a>
                     <a href="#" target="_blank">Youtube</a>
