--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,7 @@
                         <div class="tech-tag-container">
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
+                            <span class="tech-tag">Python</span>
                             <span class="tech-tag">MariaDB</span>
                             <span class="tech-tag">DNP3</span>
                             <span class="tech-tag">Renewables</span>
@@ -117,10 +118,11 @@
                     <img src="projects/filler-ph/img/thumbnail.png" alt="Filler System">
                     <div class="card-content">
                         <h2>Development/Commissioning: Filler Machine</h2>
-                        <p>Commissioned medium-speed filling machine for bleach product.</p>
+                        <p>Commissioning of medium-speed filling machine for bleach product.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">CX-Programmer</span>
-                            <span class="tech-tag">Omron CPE</span>
+                            <span class="tech-tag">Omron</span>
+                            <span class="tech-tag">CJ</span>
                             <span class="tech-tag">Danfoss</span>
                             <span class="tech-tag">Chemical</span>
                             <span class="tech-tag">Asia</span>
@@ -234,7 +236,7 @@
                 <p>Industrial Automation & SCADA Engineer</p>
                 <p>Location: Makati City, Philippines</p>
                 <p>Email: <a href="mailto:n.rgraza@yahoo.com">n.rgraza@yahoo.com</a></p>
-                <p>Phone: [+63 905 5091 301]</p>
+                <p>Phone: +63 905 5091 301</p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/ngraza" target="_blank">LinkedIn</a>
                     <a href="#" target="_blank">Youtube</a>
@@ -275,7 +277,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 NRGRAZA. All Rights Reserved.</p>
+            <p>&copy; 2025 Bert Graza. All Rights Reserved.</p>
         </div>
     </footer>
     
