--- a/resume.html
+++ b/resume.html
@@ -93,7 +93,7 @@
                 <ul class="skill-list">
                     <li>Siemens (TIA Portal and Simatic Manager)</li>
                     <li>Allen Bradley (Studio 5000)</li>
-                    <li>Omron (CX Designer)</li>
+                    <li>Omron (CX Programmer)</li>
                     <li>GE Fanuc (Proficy)</li>
                     <li>Ignition</li>
                     <li>WinCC</li>
@@ -141,7 +141,7 @@
                 <p>Industrial Automation & SCADA Engineer</p>
                 <p>Location: Makati City, Philippines</p>
                 <p>Email: <a href="mailto:n.rgraza@yahoo.com">n.rgraza@yahoo.com</a></p>
-                <p>Phone: [+63 905 5091 301]</p>
+                <p>Phone: +63 905 5091 301</p>
                 <div class="social-links">
                     <a href="https://linkedin.com/in/ngraza" target="_blank">LinkedIn</a>
                     <a href="#" target="_blank">Youtube</a>
@@ -182,7 +182,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>&copy; 2025 BB AZARG. All Rights Reserved.</p>
+            <p>&copy; 2025 Bert Graza. All Rights Reserved.</p>
         </div>
 
     </footer>
