--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
                 <h1>NORBERTO GRAZA</h1>
                 <p>Industrial Automation & SCADA Engineer</p>
                 <p>Makati City, Philippines | Email: n.rgraza@yahoo.com | LinkedIn: linkedin.com/in/ngraza</p>
-                <p>Experienced Automation Engineer with 8+ years of experience in PLC/SCADA design, control system integration, and global commissioning across Asia, Europe, and the Middle East. Adept at delivering end-to-end automation projects and resolving technical challenges in high-pressure environments.</p>
+                <p>Experienced Automation Engineer with 8+ years of experience in PLC/SCADA design, control system integration, and global commissioning across Asia, Europe, Middle East and Africa. Adept at delivering end-to-end automation projects and resolving technical challenges in high-pressure environments.</p>
             </div>
 
             <div class="resume-section">
@@ -155,7 +155,7 @@
                     <li><a href="projects.html">All Projects</a></li>
                     <li><a href="learning.html">Learning</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Contact</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
 
