--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                     <li><a href="projects.html">All Projects</a></li>
                     <li><a href="learning.html">Learning</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Contact</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
 
