--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                             <span class="tech-tag">S7-1500F</span>
                             <span class="tech-tag">Rexroth</span>
                             <span class="tech-tag">IO-Link</span>
+                            <span class="tech-tag">Metals</span>
                             <span class="tech-tag">Europe</span>
                         </div>
                     </div>
@@ -208,7 +209,7 @@
                     <li><a href="projects.html">All Projects</a></li>
                     <li><a href="learning.html">Learning</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Contact</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
 
