--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,8 @@
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
-                            <span class="tech-tag">Hydraulic Control</span>
+                            <span class="tech-tag">Rexroth</span>
+                            <span class="tech-tag">IO-Link</span>
                             <span class="tech-tag">Metals</span>
                             <span class="tech-tag">Europe</span>
                         </div>
@@ -250,7 +251,7 @@
                     <li><a href="projects.html">All Projects</a></li>
                     <li><a href="learning.html">Learning</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Contact</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                 </ul>
             </div>
 
