--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <article class="project-card">
                     <img src="projects/extrusion-tk/img/thumbnail.png" alt="Aluminum Handling System Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Aluminum Handling</h2>
+                        <h2>Development/Commissioning: Aluminium Handling</h2>
                         <p>From startup to product, involved in software development, power energization, device configuration, testing and production. </p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
@@ -142,7 +142,7 @@
                     <img src="projects/forging-kz/img/thumbnail.png" alt="Hydraulic Forging Press Thumbnail">
                     <div class="card-content">
                         <h2>Commissioning: Hydraulic Forging Press</h2>
-                        <p>Hardware configuration, manual and automatic cycle testing and FAT.</p>
+                        <p>Commissioning and optimization of a high-pressure hydraulic forging press control system.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
