--- a/projects.html
+++ b/projects.html
@@ -38,14 +38,15 @@
                     <img src="projects/ignition-ph/img/thumbnail.jpg" alt="Ignition SCADA Dashboard Thumbnail">
                     <div class="card-content">
                         <h2>Development: Renewable Power Plant SCADA</h2>
-                        <p>Designed and developed the centralized SCADA system to unify 7 renewable power plants.</p>
+                        <p>Involved in designed and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
+                            <span class="tech-tag">Report Module</span>
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">MariaDB</span>
                             <span class="tech-tag">DNP3</span>
-                            <span class="tech-tag">Renewables</span>
+                            <span class="tech-tag">OPC</span>
                             <span class="tech-tag">Asia</span>
                         </div>
                     </div>
@@ -54,14 +55,14 @@
                 <article class="project-card">
                     <img src="projects/extrusion-tk/img/thumbnail.png" alt="Aluminum Handling System Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Aluminum Handling</h2>
-                        <p>Involved in software development, power energization, device configuration, testing and production. </p>
+                        <h2>Development/Commissioning: Aluminium Handling</h2>
+                        <p>From startup to product, involved in software development, power energization, device configuration, testing and production. </p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
                             <span class="tech-tag">S120</span>
-                            <span class="tech-tag">Metals</span>
+                            <span class="tech-tag">Nidec Commander</span>
                             <span class="tech-tag">Middle East</span>
                         </div>
                     </div>
@@ -71,13 +72,13 @@
                     <img src="projects/casting-ng/img/thumbnail.jpg" alt="Concrete Sleeper Plant Thumbnail">
                     <div class="card-content">
                         <h2>Development/Commissioning: Concrete Sleeper Plant</h2>
-                        <p>Full software development and project implementation for rail production, meeting all specification.</p>
+                        <p>Involved in software development to project implementation, ensuring to meet the production specification.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
                             <span class="tech-tag">S120</span>
-                            <span class="tech-tag">Construction</span>
+                            <span class="tech-tag">G120</span>
                             <span class="tech-tag">Africa</span>
                         </div>
                     </div>
@@ -149,13 +150,12 @@
                     <img src="projects/minerals-cn/img/thumbnail.jpg" alt="Coal and Clay Storage System Thumbnail">
                     <div class="card-content">
                         <h2>Commissioning: Coal and Clay Storage</h2>
-                        <p>Configured wireless devices and fail-safe function for a fully automatic material handling cycle.</p>
+                        <p>Configured wireless devices and fail-safe function, ensure that the fully automatic cycle has been met based on the specification.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
-                            <span class="tech-tag">Wireless Safety</span>
-                            <span class="tech-tag">Minerals</span>
+                            <span class="tech-tag">G120</span>
                             <span class="tech-tag">Asia</span>
                         </div>
                     </div>
