--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
                 </article>
 
                 <article class="project-card">
-                    <img src="projects/pressureless-ph/img/thumbnail.png" alt="High Speed Conveyor System">
+                    <img src="projects/pressureless-ph/img/thumbnail.jpg" alt="High Speed Conveyor System">
                     <div class="card-content">
                         <h2>Development/Commissioning: Pressureless Conveyor Line</h2>
                         <p>Commissioned high-speed conveyor systems with integration to pasteurizer, caser and outfeed conveyor line.</p>
@@ -117,7 +117,7 @@
                 </article>
 
                 <article class="project-card">
-                    <img src="projects/filler-ph/img/thumbnail.png" alt="Filler System">
+                    <img src="projects/filler-ph/img/thumbnail.jpg" alt="Filler System">
                     <div class="card-content">
                         <h2>Development/Commissioning: Filler Machine</h2>
                         <p>Commissioning of medium-speed filling machine for bleach product.</p>
