--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <img src="projects/ignition-ph/img/thumbnail.jpg" alt="Ignition SCADA Dashboard Thumbnail">
                     <div class="card-content">
                         <h2>Development: Renewable Power Plant SCADA</h2>
-                        <p>Involved in designed and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
+                        <p>Involved in designing and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
@@ -117,7 +117,7 @@
                             <span class="tech-tag">S7-1500F</span>
                             <span class="tech-tag">S120</span>
                             <span class="tech-tag">Nidec Commander</span>
-                            <span class="tech-tag">Middle East</span>
+                            <span class="tech-tag">Europe</span>
                         </div>
                     </div>
                 </article>
