--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                     <img src="projects/ignition-ph/img/thumbnail.jpg" alt="Ignition SCADA Dashboard Thumbnail">
                     <div class="card-content">
                         <h2>Development: Renewable Power Plant SCADA</h2>
-                        <p>Involved in designed and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
+                        <p>Involved in designing and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
@@ -63,7 +63,7 @@
                             <span class="tech-tag">S7-1500F</span>
                             <span class="tech-tag">S120</span>
                             <span class="tech-tag">Nidec Commander</span>
-                            <span class="tech-tag">Middle East</span>
+                            <span class="tech-tag">Europe</span>
                         </div>
                     </div>
                 </article>
@@ -105,7 +105,7 @@
                     <img src="projects/pressureless-ph/img/thumbnail.jpg" alt="High Speed Conveyor System">
                     <div class="card-content">
                         <h2>Development/Commissioning: Pressureless Conveyor Line</h2>
-                        <p>Commissioned high-speed conveyor systems with integration to pasteurizer, caser and outfeed conveyor line.</p>
+                        <p>Commissioning of complete high-speed conveyor systems for beverage drink.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">Simatic Manager</span>
                             <span class="tech-tag">S7-300</span>
@@ -133,7 +133,7 @@
                 </article>
                 
                 <article class="project-card">
-                    <img src="projects/water-wtp/img/thumbnail.png" alt="Palletizer Depalletizer Thumbnail">
+                    <img src="projects/pal-depal-ph/img/thumbnail.jpg" alt="Palletizer Depalletizer Thumbnail">
                     <div class="card-content">
                         <h2>Development/Commissioning: Pal-Depalletizer Machine</h2>
                         <p>Develop and perform on-site commissioning of packaging machine and SAT.</p>
@@ -207,7 +207,7 @@
                 </article>
 
                 <article class="project-card">
-                    <img src="projects/extrusion-sk/img/thumbnail.png" alt="Extrusion Press">
+                    <img src="projects/extrusion-sk/img/thumbnail.JPG" alt="Extrusion Press">
                     <div class="card-content">
                         <h2>Commissioning: Copper Extrusion Press</h2>
                         <p>Perform commissioning of machine upgrade, additional die axis cycle and cycle recipe.</p>
