Minor word correction

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         
         <section class="skills-carousel-section">
-            <h2>Core Technology Expertise</h2>
+            <h2>Core Technology</h2>
             <div class="carousel-window">
                 <div class="skills-carousel">
                     
@@ -147,7 +147,7 @@
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
-                            <span class="tech-tag">Rexroth</span>
+                            <span class="tech-tag">Bosch</span>
                             <span class="tech-tag">IO-Link</span>
                             <span class="tech-tag">Metals</span>
                             <span class="tech-tag">Europe</span>
@@ -229,7 +229,7 @@
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.docx">Resume (PDF)</a></li>
+                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.pdf">Resume (PDF)</a></li>
                     <li><a href="#">Skills Matrix</a></li>
                 </ul>
             </div>
