--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
-                            <span class="tech-tag">Rexroth</span>
+                            <span class="tech-tag">Bosch</span>
                             <span class="tech-tag">IO-Link</span>
                             <span class="tech-tag">Metals</span>
                             <span class="tech-tag">Europe</span>
@@ -120,7 +120,7 @@
                     <img src="projects/filler-ph/img/thumbnail.jpg" alt="Filler System">
                     <div class="card-content">
                         <h2>Development/Commissioning: Filler Machine</h2>
-                        <p>Commissioning of medium-speed filling machine for bleach product.</p>
+                        <p>Software development and commissioning of medium-speed filling machine for bleach agent.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">CX-Programmer</span>
                             <span class="tech-tag">Omron</span>
@@ -136,7 +136,7 @@
                     <img src="projects/pal-depal-ph/img/thumbnail.jpg" alt="Palletizer Depalletizer Thumbnail">
                     <div class="card-content">
                         <h2>Development/Commissioning: Pal-Depalletizer Machine</h2>
-                        <p>Develop and perform on-site commissioning of packaging machine and SAT.</p>
+                        <p>Revamping of old palletizer and depalletizer machine.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">Studio 5000</span>
                             <span class="tech-tag">FactoryTalk View SE</span>
@@ -213,6 +213,7 @@
                         <p>Perform commissioning of machine upgrade, additional die axis cycle and cycle recipe.</p>
                         <div class="tech-tag-container">
                             <span class="tech-tag">TIA Portal</span>
+                            <span class="tech-tag">Ignition</span>
                             <span class="tech-tag">S120</span>
                             <span class="tech-tag">G120</span>
                             <span class="tech-tag">Asia</span>
@@ -271,7 +272,7 @@
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.docx">Resume (PDF)</a></li>
+                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.pdf">Resume (PDF)</a></li>
                     <li><a href="#">Skills Matrix</a></li>
                 </ul>
             </div>
