--- a/learning.html
+++ b/learning.html
@@ -77,7 +77,7 @@
             <div class="footer-column">
                 <h4>Resources</h4>
                 <ul>
-                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.docx">Resume (PDF)</a></li>
+                    <li><a href="assets/resource/NGraza_CV.pdf" download="NGraza_CV.pdf">Resume (PDF)</a></li>
                     <li><a href="#">Skills Matrix</a></li>
                 </ul>
             </div>
