Update project tags

--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
                 <article class="project-card">
                     <img src="projects/ignition-ph/img/thumbnail.jpg" alt="Ignition SCADA Dashboard Thumbnail">
                     <div class="card-content">
-                        <h2>Development: Renewable Power Plant SCADA</h2>
+                        <h2>Renewable Power Plant SCADA</h2>
                         <p>Involved in designing and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
                             <span class="tech-tag">Report Module</span>
@@ -109,9 +110,11 @@
                 <article class="project-card">
                     <img src="projects/extrusion-tk/img/thumbnail.png" alt="Aluminum Handling System Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Aluminium Handling</h2>
+                        <h2>Downstream Aluminium Handling</h2>
                         <p>From startup to product, involved in software development, power energization, device configuration, testing and production. </p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -125,9 +128,11 @@
                 <article class="project-card">
                     <img src="projects/casting-ng/img/thumbnail.jpg" alt="Concrete Sleeper Plant Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Concrete Sleeper Plant</h2>
+                        <h2>Railway Concrete Sleeper Plant</h2>
                         <p>Involved in software development to project implementation, ensuring to meet the production specification.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -141,9 +146,10 @@
                 <article class="project-card">
                     <img src="projects/forging-kz/img/thumbnail.png" alt="Hydraulic Forging Press Thumbnail">
                     <div class="card-content">
-                        <h2>Commissioning: Hydraulic Forging Press</h2>
+                        <h2>Hydraulic Forging Press</h2>
                         <p>Commissioning and optimization of a high-pressure hydraulic forging press control system.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -158,9 +164,10 @@
                 <article class="project-card">
                     <img src="projects/wincc-pro/img/thumbnail.png" alt="Experimental Engine SCADA Thumbnail">
                     <div class="card-content">
-                        <h2>Development: Experimental Engine SCADA</h2>
+                        <h2>Experimental Engine SCADA</h2>
                         <p>Software development of the SCADA system for the experimental totem engine.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -173,9 +180,10 @@
                 <article class="project-card">
                     <img src="projects/minerals-cn/img/thumbnail.jpg" alt="Coal and Clay Storage System Thumbnail">
                     <div class="card-content">
-                        <h2>Commissioning: Coal and Clay Storage</h2>
+                        <h2>Coal and Clay Storage</h2>
                         <p>Configured wireless devices and fail-safe function, ensure that the fully automatic cycle has been met based on the specification.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
