--- a/projects.html
+++ b/projects.html
@@ -37,9 +37,10 @@
                 <article class="project-card">
                     <img src="projects/ignition-ph/img/thumbnail.jpg" alt="Ignition SCADA Dashboard Thumbnail">
                     <div class="card-content">
-                        <h2>Development: Renewable Power Plant SCADA</h2>
+                        <h2>Renewable Power Plant SCADA</h2>
                         <p>Involved in designing and software development of the centralize SCADA system to unify 7 renewable power plants.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
                             <span class="tech-tag">Ignition 8.1</span>
                             <span class="tech-tag">Perspective</span>
                             <span class="tech-tag">Report Module</span>
@@ -55,9 +56,11 @@
                 <article class="project-card">
                     <img src="projects/extrusion-tk/img/thumbnail.png" alt="Aluminum Handling System Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Aluminium Handling</h2>
+                        <h2>Downstream Aluminium Handling</h2>
                         <p>From startup to product, involved in software development, power energization, device configuration, testing and production. </p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -71,9 +74,11 @@
                 <article class="project-card">
                     <img src="projects/casting-ng/img/thumbnail.jpg" alt="Concrete Sleeper Plant Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Concrete Sleeper Plant</h2>
+                        <h2>Railway Concrete Sleeper Plant</h2>
                         <p>Involved in software development to project implementation, ensuring to meet the production specification.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -87,9 +92,10 @@
                 <article class="project-card">
                     <img src="projects/forging-kz/img/thumbnail.png" alt="Hydraulic Forging Press Thumbnail">
                     <div class="card-content">
-                        <h2>Commissioning: Hydraulic Forging Press</h2>
+                        <h2>Hydraulic Forging Press</h2>
                         <p>Commissioning and optimization of a high-pressure hydraulic forging press control system.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -104,9 +110,11 @@
                 <article class="project-card">
                     <img src="projects/pressureless-ph/img/thumbnail.jpg" alt="High Speed Conveyor System">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Pressureless Conveyor Line</h2>
+                        <h2>Pressureless Conveyor Line</h2>
                         <p>Commissioning of complete high-speed conveyor systems for beverage drink.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">Simatic Manager</span>
                             <span class="tech-tag">S7-300</span>
                             <span class="tech-tag">Danfoss</span>
@@ -119,9 +127,11 @@
                 <article class="project-card">
                     <img src="projects/filler-ph/img/thumbnail.jpg" alt="Filler System">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Filler Machine</h2>
+                        <h2>Filler Machine</h2>
                         <p>Software development and commissioning of medium-speed filling machine for bleach agent.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">CX-Programmer</span>
                             <span class="tech-tag">Omron</span>
                             <span class="tech-tag">CJ</span>
@@ -135,9 +145,11 @@
                 <article class="project-card">
                     <img src="projects/pal-depal-ph/img/thumbnail.jpg" alt="Palletizer Depalletizer Thumbnail">
                     <div class="card-content">
-                        <h2>Development/Commissioning: Pal-Depalletizer Machine</h2>
+                        <h2>Pal-Depalletizer Machine</h2>
                         <p>Revamping of old palletizer and depalletizer machine.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">Studio 5000</span>
                             <span class="tech-tag">FactoryTalk View SE</span>
                             <span class="tech-tag">Danfoss</span>
@@ -149,9 +161,10 @@
                 <article class="project-card">
                     <img src="projects/minerals-cn/img/thumbnail.jpg" alt="Coal and Clay Storage System Thumbnail">
                     <div class="card-content">
-                        <h2>Commissioning: Coal and Clay Storage</h2>
+                        <h2>Coal and Clay Storage</h2>
                         <p>Configured wireless devices and fail-safe function, ensure that the fully automatic cycle has been met based on the specification.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -164,9 +177,10 @@
                 <article class="project-card">
                     <img src="projects/wincc-pro/img/thumbnail.png" alt="Experimental Engine SCADA Thumbnail">
                     <div class="card-content">
-                        <h2>Development: Experimental Engine SCADA</h2>
+                        <h2>Experimental Engine SCADA</h2>
                         <p>Software development of the SCADA system for the experimental totem engine.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Development</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">WinCC Professional</span>
                             <span class="tech-tag">S7-1500F</span>
@@ -179,12 +193,12 @@
                 <article class="project-card">
                     <img src="projects/flat-bh/img/thumbnail.png" alt="Flat Cold Rolling">
                     <div class="card-content">
-                        <h2>Commissioning: Cold Rolling Machine</h2>
+                        <h2>Cold Rolling Machine</h2>
                         <p>Support installation and production of sheet metal cold rolling, straigthening, cutting and stacking machine.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">Simatic Manager</span>
                             <span class="tech-tag">WinCC</span>
-                            <span class="tech-tag">Simotion Scout</span>
                             <span class="tech-tag">Simodrive</span>
                             <span class="tech-tag">Asia</span>
                         </div>
@@ -194,9 +208,11 @@
                 <article class="project-card">
                     <img src="projects/rolling-mill-ph/img/thumbnail.png" alt="Steel Rolling Mill Control Panel">
                     <div class="card-content">
-                        <h2>Maintenance/Upgrade: Steel Rolling Mill</h2>
+                        <h2>Steel Rolling Mill</h2>
                         <p>Assist control and drive upgrade of 1.2MT rolling mill.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
+                            <span class="role">Upgrade</span>
                             <span class="tech-tag">Proficy ME</span>
                             <span class="tech-tag">Cimplicity</span>
                             <span class="tech-tag">GE Fanuc</span>
@@ -209,9 +225,10 @@
                 <article class="project-card">
                     <img src="projects/extrusion-sk/img/thumbnail.JPG" alt="Extrusion Press">
                     <div class="card-content">
-                        <h2>Commissioning: Copper Extrusion Press</h2>
+                        <h2>Copper Extrusion Press</h2>
                         <p>Perform commissioning of machine upgrade, additional die axis cycle and cycle recipe.</p>
                         <div class="tech-tag-container">
+                            <span class="role">Commissioning</span>
                             <span class="tech-tag">TIA Portal</span>
                             <span class="tech-tag">Ignition</span>
                             <span class="tech-tag">S120</span>
