--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,20 @@
             <nav class="main-nav">
                 <a href="index.html">HOME</a>
                 <a href="projects.html" class="active">PROJECTS</a>
-                <a href="learning.html">LEARNING</a>
+                <div class="nav-dropdown">
+                    <a href="learning.html" class="dropbtn">LEARNING</a>
+                    <div class="dropdown-content">
+                        <a href="learning-ignition.html">Ignition</a>
+                        <a href="learning-tia.html">TIA Portal</a>
+                        <a href="learning-simatic.html">Simatic Manager</a>
+                        <a href="learning-studio5000.html">Studio 5000</a>
+                        <a href="learning-rslogix500.html">RSLogix 500</a>
+                        <a href="learning-factorytalk.html">Factory Talk</a>
+                        <a href="learning-cxprogrammer.html">CX-Programmer</a>
+                        <a href="learning-weintek.html">Weintek EasyBuilder Pro</a>
+                        <a href="learning-mariadb.html">MariaDB</a>
+                    </div>
+                </div>
                 <a href="about.html">ABOUT</a>
                 <a href="resume.html">RESUME</a>
             </nav>
@@ -134,7 +147,6 @@
                             <span class="role">Commissioning</span>
                             <span class="tech-tag">CX-Programmer</span>
                             <span class="tech-tag">Omron</span>
-                            <span class="tech-tag">CJ</span>
                             <span class="tech-tag">Danfoss</span>
                             <span class="tech-tag">Chemical</span>
                             <span class="tech-tag">Asia</span>
