Edit main-nav style

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
                 <a href="index.html">HOME</a>
                 <a href="projects.html" class="active">PROJECTS</a>
                 <div class="nav-dropdown">
-                    <a href="learning.html" class="dropbtn">LEARNING</a>
+                    <a href="learning.html">LEARNING</a>
                     <div class="dropdown-content">
                         <a href="learning-ignition.html">Ignition</a>
                         <a href="learning-tia.html">TIA Portal</a>
