--- a/learning-weintek.html
+++ b/learning-weintek.html
@@ -43,7 +43,7 @@
     <main>
         <section class="under-construction">
             <div class="dev-msg">
-                The module is being engineered for precision! The systems are running smoothly, and the content will be ready soon.
+                The module is being engineered for precision! The content will be ready soon.
             </div>
 
             <div class="coffee-animation">
