HeaderFooter source file

--- a/learning.html
+++ b/learning.html
@@ -28,7 +28,7 @@
                         <a href="learning-studio5000.html">Studio 5000</a>
                         <a href="learning-rslogix500.html">RSLogix 500</a>
                         <a href="learning-factorytalk.html">Factory Talk</a>
-                        <a href="learning/_pages/cxprogrammer.html">CX-Programmer</a>
+                        <a href="learning-cxprogrammer.html">CX-Programmer</a>
                         <a href="learning-weintek.html">Weintek EasyBuilder Pro</a>
                         <a href="learning-mariadb.html">MariaDB</a>
                     </div>
