Header-footer update js

--- a/learning-factorytalk.html
+++ b/learning-factorytalk.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TIA Portal</title><link rel="stylesheet" href="assets/css/underdev.css">
+    <title>Learning | FactoryTalk</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/underdev.css">
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <script>
+        $(function(){
+            $("#footer-placeholder").load("footer.html");
+        });
+    </script>
 </head>
 <body>
 
@@ -43,7 +53,7 @@
     <main>
         <section class="under-construction">
             <div class="dev-msg">
-                The module is being engineered for precision! The content will be ready soon.
+                The module is being engineered for precision! The systems are running smoothly, and the content will be ready soon.
             </div>
 
             <div class="coffee-animation">
