Header-footer update

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">MariaDB</span>
                             <span class="tech-tag">DNP3</span>
-                            <span class="tech-tag">OPC</span>
+                            <span class="tech-tag">OPC-UA</span>
                             <span class="tech-tag">Asia</span>
                         </div>
                     </div>
@@ -261,5 +261,14 @@
     </main>
     
     <div id="footer-placeholder"></div>
+
+    <div id="lightbox-modal" class="lightbox-modal">
+        <div class="lightbox-content">
+            <span class="lightbox-close">&times;</span>
+            <img src="" alt="Project Photo" id="lightbox-image">
+        </div>
+    </div>
+    
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
