--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
                 <a href="index.html">HOME</a>
                 <a href="projects.html">PROJECTS</a>
                 <div class="nav-dropdown">
-                    <a href="learning.html" class="active">LEARNING</a>
+                    <a href="learning.html">LEARNING</a>
                     <div class="dropdown-content">
                         <a href="learning-ignition.html">Ignition</a>
                         <a href="learning-tia.html">TIA Portal</a>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <a href="about.html">ABOUT</a>
-                <a href="resume.html">RESUME</a>
+                <a href="resume.html" class="active">RESUME</a>
             </nav>
             
         </div>
