--- a/learning-mariadb.html
+++ b/learning-mariadb.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning | MariaDB SQL</title>
+    <title>Learning | SQL/MariaDB</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/underdev.css">
 
