--- a/learning-weintek.html
+++ b/learning-weintek.html
@@ -43,7 +43,7 @@
                         <a href="learning-mariadb.html">MariaDB</a>
                     </div>
                 </div>
-                <a href="about.html">ABOUT</a>
+                <!-- <a href="about.html">ABOUT</a> -->
                 <a href="resume.html">RESUME</a>
             </nav>
             
