--- a/learning.html
+++ b/learning.html
@@ -41,7 +41,7 @@
                         <a href="learning-mariadb.html">MariaDB</a>
                     </div>
                 </div>
-                <a href="about.html">ABOUT</a>
+                <!-- <a href="about.html">ABOUT</a> -->
                 <a href="resume.html">RESUME</a>
             </nav>
             
