--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <!-- <link rel="icon" type="image/png" href="assets/img/icon.png"> -->
     <link rel="stylesheet" href="assets/css/style.css">
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -41,12 +42,29 @@
                         <a href="learning-mariadb.html">MariaDB</a>
                     </div>
                 </div>
-                <a href="about.html">ABOUT</a>
+                <!-- <a href="about.html">ABOUT</a> -->
                 <a href="resume.html">RESUME</a>
             </nav>
             
         </div>
     </header>
+
+        <!-- <section class="max-width-container">
+            <h1 class="section-title">PROJECT PORTFOLIO</h1>
+            <p class="section-description">
+                The following projects represent a curated selection of technical milestones and industrial solutions 
+                delivered by our founder throughout an extensive career in automation. While some of these 
+                successes were achieved during previous professional tenures, they form the bedrock of the 
+                expertise we bring to <strong><span class="gradient-text">PULSEIQ</span></strong> today.
+            </p>
+            <p class="section-description">
+                We pride ourselves on being <strong>experts in global collaboration</strong>. With a proven 
+                track record across Asia, Europe, and Africa, we possess the cultural adaptability and 
+                technical versatility to partner with international teams, OEMs, and end-users anywhere in the world.
+            </p>
+        </section> -->
+
+<hr class="section-divider">
 
     <main>
         <section class="highlight-projects-section">
@@ -152,8 +170,8 @@
                         <div class="tech-tag-container">
                             <span class="role">Development</span>
                             <span class="role">Commissioning</span>
-                            <span class="tech-tag">CX-Programmer</span>
-                            <span class="tech-tag">Omron</span>
+                            <span class="tech-tag">Studio 5000</span>
+                            <span class="tech-tag">FactoryTalk View SE</span>
                             <span class="tech-tag">Danfoss</span>
                             <span class="tech-tag">Chemical</span>
                             <span class="tech-tag">Asia</span>
@@ -169,8 +187,8 @@
                         <div class="tech-tag-container">
                             <span class="role">Development</span>
                             <span class="role">Commissioning</span>
-                            <span class="tech-tag">Studio 5000</span>
-                            <span class="tech-tag">FactoryTalk View SE</span>
+                            <span class="tech-tag">TIA Portal</span>
+                            <span class="tech-tag">WinCC Advance</span>
                             <span class="tech-tag">Danfoss</span>
                             <span class="tech-tag">Asia</span>
                         </div>
@@ -210,7 +228,7 @@
                 </article>
 
                 <article class="project-card">
-                    <img src="projects/flat-bh/img/thumbnail.png" alt="Flat Cold Rolling">
+                    <img src="projects/cold-roll-bh/img/thumbnail.jpg" alt="Flat Cold Rolling">
                     <div class="card-content">
                         <h2>Cold Rolling Machine</h2>
                         <p>Support installation and production of sheet metal cold rolling, straigthening, cutting and stacking machine.</p>
