--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
                         <a href="learning-mariadb.html">MariaDB</a>
                     </div>
                 </div>
-                <a href="about.html">ABOUT</a>
+                <!-- <a href="about.html">ABOUT</a> -->
                 <a href="resume.html" class="active">RESUME</a>
             </nav>
             
